Fixes overflow

--- a/app/assets/stylesheets/pages/rj/2019.scss
+++ b/app/assets/stylesheets/pages/rj/2019.scss
@@ -5,6 +5,7 @@
 
 #container.rj-2019 {
   font-family: monument, sans-serif;
+  overflow-x: hidden;
 
   p {
     line-height: 1.5em;
